@@ -146,6 +146,7 @@ Jython in ways large and small, in no particular order:
     Yuji Yamano
     Pekka Klärck
     Nathaniel Kenmir
+    Jiwon Seo
 
 Local Variables:
 mode: indented-text
